--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="contentBx">
                 <div class="formBx">
 
-                    <h2>Cadastre-se</h2>
+                    <h1><b>Cadastre-se</b></h1>
 
                     <form id="formulario" onsubmit="validarEnviar()">
 
